2009-06-08
	* $battery_short can now also display F (full), N (not present),E (empty),
	U (unknown)
	* Fix problem that $battery and $battery_short displayed unknown on some
	systems when the battery wasn't unknown but full

2009-06-06
	* Add support for membar,swapbar,cpubar,fs_bar,fs_bar_free,battery_bar,
	execbar,execibar,lua_bar,entropy_bar,mpd_bar,apcupsd_loadbar and
	wireless_link_bar
	* Fix finding IP before first update

2009-06-04
	* Add entropy_perc printing the available entropy as percentage
	* Add read_tcp to print stuff from tcp-sockets

2009-05-24
	* Added fancy new 'temperature gradients' feature for graphs, via the -t
	switch at the end of graph arguments.
	* Allow ~/... and $HOME/... paths for more stuff.

2009-06-07
	* Conky 1.7.1 released

2009-05-31
	* Fix hostname resolution for mpd_host
	* Made sure that no X11 stuff is in the binary with --disable-X11

2009-05-19
	* Added inotify support to reload the config when modified automatically
	on systems that support it
	* Added inotify support for reloading Lua scripts automagically

2009-05-17
	* Added support for the Lua programming language
	* Added support for rending images by way of Imlib2
	* Patch to fix rounding error with CPU values (thanks Filipe)
	* Added support for execbar without X

2009-05-16
	* Added another builtin config that is used when compiled with --disable-X11

2009-05-13
	* Fix segfault when there is no config available

2009-05-12
	* Make sure if_gw isn't checked twice

2009-05-11
	* Added arguments to hwmon for value precalculation

2009-05-10
	* Added support for APC UPS daemon monitoring
	* Fixed hwmon for kernel 2.6.29

2009-05-09
	* Allow the use of '#' for comments within text area (can be escaped with
	'\#'

2009-05-08
	* Only include disp when needed
	* Made sure update_uname works without X11

2009-05-07
	* Fix occasional cpubar segfaults
	* Added top_name_width config option

2009-05-05
	* Added some completely pointless OpenMP optimizations(?)

2009-05-03